--- a/fiori-app-inTake/mta.yaml
+++ b/fiori-app-inTake/mta.yaml
@@ -1,25 +1,25 @@
 _schema-version: "3.2"
-ID: ext-fiori-manage-packages-v2
+ID: ext-fiori-inTake-v2
 version: 0.0.1
 provider: SAP
 modules:
-- name: ext-manage-packages-v2-app-content
+- name: ext-inTake-v2-app-content
   type: com.sap.application.content
   path: .
   requires:
-  - name: ext-manage-packages-v2-html5-repo-host
+  - name: ext-inTake-v2-html5-repo-host
     parameters:
       content-target: true
   build-parameters:
     build-result: resources
     requires:
     - artifacts:
-      - sapb1manage-packages.zip
-      name: sapb1manage-packages
+      - sapb1inTake.zip
+      name: sapb1inTake
       target-path: resources/
-- name: sapb1manage-packages
+- name: sapb1inTake
   type: html5
-  path: manage-packages
+  path: inTake
   build-parameters:
     build-result: dist
     builder: custom
@@ -28,11 +28,11 @@ modules:
     - npm run build:cf
     supported-platforms: []
 resources:
-- name: ext-manage-packages-v2-html5-repo-host
+- name: ext-inTake-v2-html5-repo-host
   type: org.cloudfoundry.managed-service
   parameters:
     service: html5-apps-repo
-    service-name: ext-manage-packages-v2-html5-app-host-service
+    service-name: ext-inTake-v2-html5-app-host-service
     service-plan: app-host
 parameters:
   deploy_mode: b1-webclient
